--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <script src="js/script.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
     <title>cipher</title>
   </head>
   <body>
+    <p>
+      This is dog.
+    </p>
+    <h2>
+      This is cat.
+    </h2>
   </body>
 </html>
